# KONGBOTV1

./: Cargo.toml  README.md  dfx.json
.dfx/ic/canisters/kongbot/: constructor.did  index.js  init_args.txt  service.did.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: registry.proto
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/checkpoints/0000000000000bb8/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/checkpoints/0000000000000c80/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/06f38c411b0309a4edfd1db113fe6e3177127489cdce83d6f5cd31a64cc1e78e/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/06f38c411b0309a4edfd1db113fe6e3177127489cdce83d6f5cd31a64cc1e78e/checkpoints/0000000000000bb8/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/3e7ee4083b8cb066e81bea41046a791f8b9c457d58bd5b54f6d5d1fbb26fe566/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/46bab453650b3f22d11f0ffe4d3057b855dd752f95eeccc69da5531e94598e2b/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/7ddbdfe2569f6c797ad88468d9271d537bd977a18853897a95afae887484b070/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/f6a7a16e48b7dd209eff86713239c20949bd7b1a872ff49f9a294a24e361ac93/: states_metadata.pbuf
.dfx/playground/: canister_ids.json  canister_timestamps.json
.dfx/playground/canisters/kongbot/: service.did.d.ts
.dfx/playground/lsp/: 3qz6y-aiaaa-aaaab-qacna-cai.did
kongbot/: Cargo.toml  can.did  canister_ids.json  dfx.json  oc_key.txt
kongbot/scripts/: deploy_bot.sh
kongbot/scripts/utils/: deploy.sh
kongbot/src/: lib.rs  router.rs  state.rs
kongbot/src/router/: commands.rs  definition.rs  metrics.rs  price.rs
kongbot/src/router/commands/: alert.rs  bal_trades.rs  coin_price.rs  common_types.rs  settrade.rs  trade_engine.rs  wallet.rs
kongbot/src/router/commands/crypto/: alert.rs  common_types.rs  icrc1_transfer.rs  icrc2_approve.rs  market.rs  mod.rs  price.rs  settrade.rs  trending.rs
kongbot/src/router/commands/crypto/icrc/: icrc1.rs  icrc2.rs  identity.rs  mod.rs
src/: lib.rs  router.rs
src/router/commands/: mod.rs
src/router/commands/crypto/: alert.rs  common_types.rs  icrc1_transfer.rs  icrc2_approve.rs  market.rs  mod.rs  price.rs  settrade.rs  trending.rs
src/router/commands/crypto/icrc/: icrc1.rs  icrc2.rs  mod.rs
src/router/commands/crypto/old/: commands.rs
(+7 files in other folders)
