[package]
name = "kongbot"
version = "0.1.0"
edition = "2021"
description = "A boilerplate for creating onchain bots on the Internet Computer"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.77"
oc_bots_sdk = { git = "https://github.com/open-chat-labs/open-chat-bots.git", branch = "main" }
oc_bots_sdk_canister = { git = "https://github.com/open-chat-labs/open-chat-bots.git", branch = "main" }
candid = "0.10.13"
getrandom = { version = "0.2.15", features = ["custom"] }
http = "1.0.0"
ic-cdk = { version = "0.17.1" }
ic-cdk-timers = "0.12.0"
ic-http-certification = "2.6.0"
ic_principal = "0.1.0"
ic-stable-structures = "0.6.8"
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
